--- a/index.html
+++ b/index.html
@@ -1391,6 +1391,14 @@
       </div>
     </footer>
 
+    <style>
+      .social-links a i {
+  font-weight: bold;
+  font-size: 1.5rem;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3); /* Adds a slight shadow for emphasis */
+}
+
+    </style>
     <!-- Scroll Top -->
     <a
       href="#"
