Updated portfolio with darjer icon in footer

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <p>
             <span
               class="typed"
-              data-typed-items="Web-Designer, Web-Developer, Photographer"
+              data-typed-items="Cloud-Engineer, Web-Designer, Web-Developer, and a Photographer"
             ></span>
           </p>
         </div>
