Updated portfolio with darjer icon in footer

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                 <div class="icon">
                   <i class="bi bi-code-slash"></i>
                 </div>
-                <a href="#" class="stretched-link">
+                <a href="" class="stretched-link">
                   <h3>Full Stack Web Development</h3>
                 </a>
                 <p>
@@ -435,7 +435,7 @@
                 <div class="icon">
                   <i class="bi bi-shield-lock"></i>
                 </div>
-                <a href="#" class="stretched-link">
+                <a href="" class="stretched-link">
                   <h3>Authentication & Security</h3>
                 </a>
                 <p>
@@ -455,7 +455,7 @@
                 <div class="icon">
                   <i class="bi bi-wordpress"></i>
                 </div>
-                <a href="#" class="stretched-link">
+                <a href="" class="stretched-link">
                   <h3>WordPress Development</h3>
                 </a>
                 <p>
@@ -475,7 +475,7 @@
                 <div class="icon">
                   <i class="bi bi-credit-card"></i>
                 </div>
-                <a href="#" class="stretched-link">
+                <a href="" class="stretched-link">
                   <h3>Payment Gateway & API Integration</h3>
                 </a>
                 <p>
@@ -495,7 +495,7 @@
                 <div class="icon">
                   <i class="bi bi-terminal"></i>
                 </div>
-                <a href="#" class="stretched-link">
+                <a href="" class="stretched-link">
                   <h3>PHP & CodeIgniter Development</h3>
                 </a>
                 <p>
@@ -515,7 +515,7 @@
                 <div class="icon">
                   <i class="bi bi-server"></i>
                 </div>
-                <a href="#" class="stretched-link">
+                <a href="" class="stretched-link">
                   <h3>Server & Deployment</h3>
                 </a>
                 <p>
