updated the image to be in center

--- a/index.html
+++ b/index.html
@@ -1014,7 +1014,7 @@
 
       <!-- /Portfolio Section -->
 
-      <!-- JavaScript -->
+      <!-- JavaScript code-->
       <script>
         function filterImages(category) {
           let items = document.querySelectorAll(".portfolio-item");
